<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="user_category"
        android:title="Keyboard">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="key_auto_save"
            android:summary="Automatically save keyboard settings"
            android:title="Auto Save" />

        <ListPreference
            android:defaultValue="Piano"
            android:dialogTitle="Instruments"
            android:entries="@array/pref_instrument"
            android:entryValues="@array/pref_instrument"
            android:key="key_instrument"
            android:summary="@string/summary_instrument"
            android:title="@string/title_instrument" />

        <ListPreference
            android:defaultValue="Wicki-Hayden"
            android:dialogTitle="Layouts"
            android:entries="@array/pref_keyboard_layout"
            android:entryValues="@array/pref_keyboard_layout"
            android:key="key_keyboard_layout"
            android:title="Keyboard Layout" />

        <ListPreference
            android:defaultValue="12-EDO"
            android:dialogTitle="Music Scales"
            android:entries="@array/pref_music_scale"
            android:entryValues="@array/pref_music_scale"
            android:key="key_music_scale"
            android:title="Music Scale" />

        <ListPreference
            android:defaultValue="Scientific"
            android:dialogTitle="Key Display"
            android:entries="@array/pref_key_display"
            android:entryValues="@array/pref_key_display"
            android:key="key_display"
            android:title="Key Display" />

        <ListPreference
            android:defaultValue="Black &amp; White"
            android:dialogTitle="Color Schemes"
            android:entries="@array/pref_color_scheme"
            android:entryValues="@array/pref_color_scheme"
            android:key="key_color_scheme"
            android:title="Color Scheme" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>